Consumer (single queue) Env config